# chordpro-epub

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  Test_01.cho  chopro-epub.css  chopro-epub.py  nochords.css  pyproject.toml  run.bat  setup.cfg  songbook.css  sony.css
.github/workflows/: publish.yml
chopro_epub/: chopro-epub.css  cli.py  parser.py  utils.py
chopro_epub/cli/: epub.py  html.py
tests/: Test_01.cho  list.txt
