[metadata]
name = chopro_epub
version = attr: chopro_epub.__version__
description = Tool to build EPUB songbooks from lists of ChordPro files
author = Paul Ferrand
author_email = paul@ferrand.cc
project_urls =
    homepage = https://github.com/paulfd/chordpro-epub
    documentation = https://github.com/paulfd/chordpro-epub
    repository = https://github.com/paulfd/chordpro-epub
    changelog = https://github.com/paulfd/chordpro-epub

[options]
python_requires = >=3.8
packages = chopro_epub
install_requires =
    pyparsing
    ebooklib
    typer
    importlib-resources>=1.1.0; python_version < '3.9'

[options.package_data]
chopro_epub = *.css

[options.extras_require]
dev =
    pytest
    wheel
    twine

[options.entry_points]
console_scripts =
    chopro-epub = chopro_epub.cli:main
